# agent_lab

./: .gitignore  INSTALL.md  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
client/: additional_imports.py  build_library_zip.py  requirements.txt
client/pyoxidizer-build/: build_template.sh  requirements.txt
client/pyoxidizer-build/lib/http_parser/: _socketio.py
config/: .env.example  pupy.conf
config/crypto/: credentials.py
pupy/agent/: __init__.py  __main__.py  config.py  handlers.py  logger.py  manager.py  pstore.py  psutil_hacks.py  service.py  utils.py  winerror_hacks.py
pupy/agent/memimporter/: __init__.py  linux.py  posix.py  utils.py  win32.py
pupy/cli/: pupygen.py  pupysh.py
pupy/commands/: __init__.py  clear.py  config.py  connect.py  creds.py  dnscnc.py  exit.py  exposed.py  gen.py  help.py  jobs.py  listen.py  logging.py  loot.py  playbook.py  python.py  restart.py  run.py  sessions.py  tag.py  version.py
pupy/conf/: imports_done.py  pupy.conf
pupy/library_patches_py3/: bz2.py  umsgpack.py
pupy/library_patches_py3/Crypto/Util/: _raw_api.py
pupy/library_patches_py3/poster/: encode.py  streaminghttp.py
pupy/modules/: ad.py  alive.py  browser_loot.py  bypassuac.py  cat.py  cd.py  check_vm.py  clear_logs.py  cloudinfo.py  cp.py  credcap.py  creds.py  date.py  dns.py  download.py  drives.py  duplicate.py  edit.py  env.py  exit.py  forward.py  get_hwuuid.py  get_info.py  getdomain.py  getprivs.py  getsystem.py  getuid.py  http.py  igd.py  impersonate.py  interactive_shell.py  inveigh.py  ip.py  isearch.py  keylogger.py  last.py  load_package.py  lock_screen.py  logs.py  loot_memory.py  (+52 more)
pupy/modules/lib/: __init__.py
pupy/modules/lib/linux/: exec_elf.py  migrate.py
pupy/modules/lib/utils/: cmdrepl.py  download.py  shell_exec.py
pupy/modules/lib/windows/: memory_exec.py  migrate.py  powerloader.py  winpcap.py
pupy/network/: conf.py
pupy/network/lib/: __init__.py  ack.py  base.py  base_launcher.py  buffer.py  clients.py  compat.py  connection.py  convcompat.py  dnsinfo.py  doh.py  echo.py  igd.py  msgtypes.py  netcreds.py  online.py  pac.py  proxies.py  pupyrpc.py  scan.py  servers.py  socks.py  stun.py  tinyhttp.py  utils.py
pupy/network/lib/launchers/: __init__.py  auto_proxy.py  bind.py  connect.py  dnscnc.py  gist.py
pupy/network/lib/picocmd/: ascii85.py  baseconv.py  client.py  dns_encoder.py  dns_encoder_table.py  picocmd.py  server.py
pupy/network/lib/rpc/: __init__.py
pupy/network/lib/rpc/core/: __init__.py  brine.py  channel.py  consts.py  netref.py  protocol.py  service.py  stream.py  vinegar.py
pupy/network/lib/rpc/lib/: colls.py
pupy/network/lib/rpc/utils/: classic.py  helpers.py  server.py
pupy/network/lib/streams/: PupySocketStream.py  PupyVirtualStream.py  __init__.py
pupy/network/lib/transports/: ec4.py  ecm.py  http.py  httpwrap.py  rsa_aes.py  utils.py  websocket.py
pupy/network/lib/transports/cryptoutils/: __init__.py  aes.py  ecpv.py  pbkdf2.py  rc4.py
pupy/network/lib/transports/obfs3/: obfs3.py  obfs3_dh.py
pupy/network/lib/transports/obfscommon/: serialize.py
pupy/network/transports/dfws/: conf.py
pupy/network/transports/ec4/: conf.py
pupy/network/transports/ecm/: conf.py
pupy/network/transports/http/: conf.py
pupy/network/transports/kc4/: conf.py
pupy/network/transports/obfs3/: conf.py
pupy/network/transports/rsa/: conf.py
pupy/network/transports/ssl/: conf.py
pupy/network/transports/ssl_rsa/: conf.py
pupy/network/transports/tcp_cleartext/: conf.py
pupy/network/transports/udp_cleartext/: conf.py
pupy/network/transports/udp_secure/: conf.py
pupy/network/transports/ws/: conf.py
pupy/pupylib/: PupyCategories.py  PupyClient.py  PupyClientInitializer.py  PupyCmd.py  PupyCompile.py  PupyCompleter.py  PupyConfig.py  PupyCredentials.py  PupyDnsCnc.py  PupyJob.py  PupyModule.py  PupyOffload.py  PupyOutput.py  PupyServer.py  PupyService.py  PupySignalHandler.py  PupyTriggers.py  PupyVersion.py  PupyWeb.py  PythonCompleter.py  __init__.py
pupy/pupylib/payloads/: dependencies.py  dotnet.py  ps1_oneliner.py  py_oneliner.py  rubber_ducky.py
pupy/pupylib/utils/: cert_display.py  credentials.py  dotenv.py  gist_updater.py  jarsigner.py  kill_port.py  listener.py  obfuscate.py  rpyc_utils.py  term.py  win_console_stubs.py
pupy/pupylib/web_ui/: README.md  __init__.py  api_handlers.py  command_docs_vi.py  module_docs_vi.py  register.py  web_ui_index.py
pupy/scriptlets/: __init__.py  keylogger.py  persistence.py
pupy/triggers/: __init__.py  notification.py
pupy/webstatic/rdesktop/: index.html
pupy_nextgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: run_tests.py  test_cli.py  test_config.py  test_core.py  test_gist_launcher.py  test_import.py  test_modules.py  test_network.py
