[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pupy-nextgen"
version = "2.0.0"
description = "Windows-focused post-exploitation framework"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.9"
authors = [
    {name = "Pupy Team", email = "pupy@example.com"},
]
maintainers = [
    {name = "Pupy Team", email = "pupy@example.com"},
]
keywords = ["post-exploitation", "pentesting", "red-team", "windows", "c2"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = [
    "pycryptodome>=3.21.0",
    "pefile>=2024.3.0",
    "PyYAML>=6.0.2",
    "netaddr>=0.10.1",
    "ecdsa>=0.18.0",
    "paramiko>=4.0.0",
    "tinyec @ https://github.com/alxchk/tinyec/archive/master.zip",
    "psutil>=6.1.0",
    "netifaces>=0.11.0",
    "pylzma>=0.5.0",
    "colorama>=0.4.6",
    "mss>=10.0.0",
    "pyOpenSSL>=24.1.0",
    "cryptography>=42.0.0",
    "scapy>=2.5.0",
    "impacket>=0.12.0",
    "dnslib>=0.9.24",
    "http-parser>=0.9.0",
    "cerberus>=1.3.5",
    "logutils>=0.3.5",
    "secretstorage>=3.3.1",
    "pypykatz>=0.6.13",
    "ed25519>=1.5",
    "pygments>=2.18.0",
    "requests>=2.32.0",
    "tornado>=6.4.2",
    "win_inet_pton>=1.1.0",
    "msgpack>=1.0.8",
    "hexdump>=3.3",
    "fusepy>=3.0.1",
    "defusedxml>=0.7.1",
    "keyboard>=0.13.5",
    "dateparser>=1.2.0",
    "puttykeys>=1.0.0",
    "pyelftools>=0.31",
    "filemagic>=1.6",
    "xattr>=0.10.2",
    "dukpy>=0.2.3",
    "chardet>=5.2.0",
    "urllib-auth @ https://github.com/alxchk/urllib-auth/archive/master.zip",
    "http_request>=1.0.0",
    "kcp @ git+https://github.com/n1nj4sec/pykcp",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "memory-profiler>=0.60.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.scripts]
pupysh = "pupy.cli.pupysh:main"
pupygen = "pupy.cli.pupygen:main"

[project.urls]
Homepage = "https://github.com/n1nj4sec/pupy"
Documentation = "https://pupy.readthedocs.io/"
Repository = "https://github.com/n1nj4sec/pupy.git"
Issues = "https://github.com/n1nj4sec/pupy/issues"
Changelog = "https://github.com/n1nj4sec/pupy/blob/master/CHANGELOG.md"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pupy*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
pupy = [
    "external/**/*",
    "packages/**/*",
    "conf/**/*",
    "webstatic/**/*",
    "triggers/**/*",
    "scriptlets/**/*",
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    ".tox",
    ".mypy_cache",
]

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pupy.external.*",
    "pupy.packages.*",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

